--- a/README
+++ b/README
@@ -4,6 +4,26 @@ ADT - Automatic Differentiation via Tapenade Utility
 This utility application and associated support files allows you to produce
 Pascal units or C++ classes containing automatically differentiated code.
 
+
+How to build the example R libraries on Linux without Tapenade
+--------------------------------------------------------------
+In a command prompt change directory to the adt project root (adt) and execute
+the following commands:
+
+chmod 755 ./*
+./init_config.sh
+./configure --disable-tapenade --with-r-lib-path={path to the R shared library import lib} --with-r-include-path={path to the R include files}
+
+After configure script has run successfully build the library using the
+shell commands,
+
+make clean
+make
+
+To be able to build you must have Automake, libtool, flex, bison and developer
+version of lapack library installed.
+
+
 Prerequisites
 -------------
 Before building Adt and the demonstration R library you need to ensure that you
@@ -57,6 +77,8 @@ Run the configure script to generated the necessary makefiles. That is, in
 the root folder for adt (the folder where the source package is installed -
 for example: /usr/src/adt-1.03), run the following in a command shell:
 
+  chmod 755 ./*
+  ./init_config.sh
   ./configure
 
 On completion run:
@@ -110,7 +132,7 @@ using the same procedure as for building under Linux, though you need to ensure
 you have the developer version of lapack installed so that the libblas library
 will be available.
 
-Alternatively, VC solution and workspace files are included in the obj folder
+Alternatively, VC solution and workspace files are included in the objs folder
 and may be used to build adt using Visual C++. If building via Visual C++,
 it is necessary to install flex and bison and have them in the system path.
 
